# question_generator

./: .gitignore  README.md  pyproject.toml
src/: audio.py  chat_gpt.py  context.txt  main.py  model.py  question.py  questions.json
