[tool.poetry]
name = "question-generator"
version = "0.1.0"
description = ""
authors = ["Ali Sultani <aliakbar.su@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.4"
pymongo = "^4.6.0"
inquirerpy = "^0.3.4"
colorama = "^0.4.6"
termcolor = "^2.3.0"
boto3 = "^1.34.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
